# ReversePolishNotation

./: CMakeLists.txt  main.cpp
GeneratorFormula/: GeneratorFormula.cpp  GeneratorFormula.h
SetOperators/: SetOperators.cpp  SetOperators.h
classes/Function/: Function.cpp  Function.h
classes/OperatorFunction/: OperatorFunction.cpp  OperatorFunction.h
classes/Variable/: Variable.cpp  Variable.h
